# Better300AWS

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  bus.html  deployment.yaml  dockerfile  flake.nix  service.yaml  update.sh
.github/workflows/: ci-cd-pipeline.yml
better-300-chart/: Chart.yaml  values.yaml
better-300-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
better-300-chart/templates/tests/: test-connection.yaml
src/: index.html  lib.rs  main.css  main.rs
systemd/: better-300.service  better-300_update.service  better-300_update.timer
