[package]
name = "better300"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For tide
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }

# For sqlite
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }

#  to make the http requests
surf = "2.3.2"


[[bin]]
name = "get_data"
#src = "src/get_data"

#[[bin]]
#name = "main"
#src = "src/main.rs"